--- a/Final.rmd
+++ b/Final.rmd
@@ -55,7 +55,7 @@ Male is categorical variable, Covid-921 vaccine administration is an explanatory
 barchartGC(~infected + treatment,data=Males)
 barchartGC(~infected + treatment,data=Males, type="percent")
 ```
-
+More than half those males who received the placebo drug rather than the real Covid-19 vaccine were infected with Covid-19. Slightly more of those who received the placebo were OK compared to those who received the real vaccine. However, that difference is very slim and nearly even.
 
 ### Numerical Descriptive Results
 
