--- a/Final.rmd
+++ b/Final.rmd
@@ -55,7 +55,11 @@ Male is categorical variable, Covid-921 vaccine administration is an explanatory
 barchartGC(~infected + treatment,data=Males)
 barchartGC(~infected + treatment,data=Males, type="percent")
 ```
-More than half those males who received the placebo drug rather than the real Covid-19 vaccine were infected with Covid-19. Slightly more of those who received the placebo were OK compared to those who received the real vaccine. However, that difference is very slim and nearly even.
+
+
+More than half those males who received the placebo rather than the real Covid921 vaccine were infected with Covid-19. Slightly more of those males who received the placebo were OK compared to males who received the real vaccine. However, that difference is very slim and barely marginal.
+
+
 
 ### Numerical Descriptive Results
 
@@ -65,6 +69,11 @@ rowPerc(table2)
 colPerc(table2)
 ```
 
+
+
+About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus.
+
+In a different clinical trial run 3% of males that received the placebo were infected with Covid-19, 1% of males who received the actual Covid921 vaccine reported being infected with Covid-19. On the other hand, about 97% of men who received a placebo were not infected with the Covid-19 virus, and 98.9% of males who received the real Covid921 vaccine reported not being infected by the Covid virus. 
 
 
 ## Inferential Results
