--- a/Final.rmd
+++ b/Final.rmd
@@ -57,7 +57,7 @@ barchartGC(~infected + treatment,data=Males, type="percent")
 ```
 
 
-More than half those males who received the placebo rather than the real Covid921 vaccine were infected with Covid-19. Slightly more of those males who received the placebo were OK compared to males who received the real vaccine. However, that difference is very slim and barely marginal.
+More than half those males who received the placebo vaccine rather than the real Covid921 vaccine were infected with Covid-19. Slightly more of those males who received the placebo vaccine were OK compared to males who received the real vaccine. However, that difference is very slim and barely marginal.
 
 
 
@@ -73,7 +73,7 @@ colPerc(table2)
 
 About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus.
 
-In a different clinical trial run 3% of males that received the placebo were infected with Covid-19, 1% of males who received the actual Covid921 vaccine reported being infected with Covid-19. On the other hand, about 97% of men who received a placebo were not infected with the Covid-19 virus, and 98.9% of males who received the real Covid921 vaccine reported not being infected by the Covid virus. 
+In a different clinical trial run 3% of males that received the placebo vaccine were infected with Covid-19, 1% of males who received the actual Covid921 vaccine reported being infected with Covid-19. On the other hand, about 97% of men who received a placebo vaccine were not infected with the Covid-19 virus, and 98.9% of males who received the real Covid921 vaccine reported not being infected by the Covid virus. 
 
 
 ## Inferential Results
@@ -137,7 +137,7 @@ barchartGC(~infected + treatment,data=Females, type="percent")
 ```
 
 
-About 38% of women who received the Covid921 vaccine were infected with covid, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine and 50% of women who received the placebo did not get infected with the Covid-19 virus
+About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus.
 
 
 ### Numerical Descriptive Results
@@ -148,6 +148,14 @@ table2 <- xtabs(~infected + treatment, data=Females)
 rowPerc(table2)
 colPerc(table2)
 ```
+
+
+Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus.
+
+
+In a different trial run, among females who were infected with the Covid-19 virus 2% received a placebo vaccine and about 1.4% received an actual Covid921 vaccine. Among females that were not infected by the Covid-19 virus 98% received a placebo vaccine and 98.6% received an actual Covid921 vaccine. 
+
+
 
 ## Inferential Results
 
