--- a/Final.rmd
+++ b/Final.rmd
@@ -57,7 +57,9 @@ barchartGC(~infected + treatment,data=Males, type="percent")
 ```
 
 
-More than half those males who received the placebo vaccine rather than the real Covid921 vaccine were infected with Covid-19. Slightly more of those males who received the placebo vaccine were OK compared to males who received the real vaccine. However, that difference is very slim and barely marginal.
+Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine.
+
+The frequency of those males infected with Covid-19 is less than 500, among those males who were infected the ones who received a placebo had higher frequency than those who received the vaccine. The frequency of those males who did not get infected with Covid-19 is about 10000, the frequency of males who were not infected both reach over 8000 regardless of whether they took a vaccine or placebo. Although, of those males who were not infected the ones who took a placebo have a higher frequency than the males who were not infected and got the Covid921 vaccine.
 
 
 
@@ -137,7 +139,9 @@ barchartGC(~infected + treatment,data=Females, type="percent")
 ```
 
 
-About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus.
+About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus.
+
+The frequency of those females who were infected by Covid-19 is less than 1000, Of those females who were infected with Covid-19 the ones given a placebo have a slightly larger frequency than the females who were infected and given the real Covid921 vaccine. The frequency of the females who were not infected with Covid-19 is approximately 10000, the frequency between women who were not infected and given the placebo and women who were not infected and given the Covid921 vaccine is just about even, although the frequency of the placebo receivers who were not infected is marginally higher.
 
 
 ### Numerical Descriptive Results
@@ -197,14 +201,16 @@ head(LGBTQ)
 ```
 
 
-Sexual orietation LGTQ+ is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile.
-
 
 # Methods
 
 
+Sexual orientation LGTQ+ is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile.
+
+
 
 # Results
+
 
 ## Descriptive Results 
 
@@ -219,6 +225,10 @@ barchartGC(~infected + treatment,data=LGBTQ, type="percent")
 
 
 Of those in the subgroup LGBTQ who were infected with the Covid-19 virus less than 20% received a placebo vaccine and over 80% received the Covid921 vaccine. Of those LGBTQ members who were not infected by Covid-19 50% received a placebo vaccine and 50% received a Covid921 vaccine.
+
+
+
+The frequency of those from the LGBTQ community infected with Covid-19 is less than 500, those LGBTQ members who were infected and given the real Covid921 vaccine have a higher frequency than those from the LGBTQ who were infected and only given a placebo vaccine. The frequency of those from the LGBTQ community who were not infected is almost 1500 and is just about even between those who were given the real vaccine and the placebo.
 
 
 ### Numerical Descriptive Results
@@ -295,6 +305,8 @@ barchartGC(~infected + treatment,data=DrugUser, type="percent")
 
 Among Drug User's who became infected with the Covid-19 virus less than 20% were given a placebo and over 80% were given the Covid921 vaccine. Among Drug User's who were not infected by Covid-19 a little more than half were given a placebo vaccine and slightly less than half were given the Covid-921 vaccine.
 
+
+The frequency of Drug Users who were infected with the Covid-19 virus is less than 500, those who were given the actual vaccine and infected have slightly higher frequency than those Drug Users who were infected and only given a placebo. The frequency of Drug Users who were not infected is over 1500 and out of those Drug Users who were not infected the ones given the placebo have a slightly higher frequency.
 
 
 ### Numerical Descriptive Results
