--- a/Final.rmd
+++ b/Final.rmd
@@ -66,9 +66,9 @@ The frequency of those males infected with Covid-19 is less than 500, among thos
 ### Numerical Descriptive Results
 
 ```{r}
-table2 <- xtabs(~infected + treatment, data=Males)
-rowPerc(table2)
-colPerc(table2)
+tableM <- xtabs(~infected + treatment, data=Males)
+rowPerc(tableM)
+colPerc(tableM)
 ```
 
 
@@ -81,24 +81,24 @@ In a different clinical trial run 3% of males that received the placebo vaccine 
 ## Inferential Results
 
 ```{r}
-chisq.test(table2)
-chisqtestGC(table2)
+chisq.test(tableM)
+chisqtestGC(tableM)
 ```
 
 
 
-P value is .000000002842 therefore we reject the null hypothesis.
+The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.
 
 
 
 
 
 ```{r}
-Males$infected=factor(Males$infected,c('none','Covid19'))
+#Males$infected=factor(Males$infected,c('none','Covid19'))
 fisher.test(Males$treatment,Males$infected)
 ```
 
-P-value is equal to 1 therefore we fail to reject the alternative hypothesis. Odds ratio is 
+ 
 
 
 
@@ -148,9 +148,9 @@ The frequency of those females who were infected by Covid-19 is less than 1000, 
 
 
 ```{r}
-table2 <- xtabs(~infected + treatment, data=Females)
-rowPerc(table2)
-colPerc(table2)
+tableF <- xtabs(~infected + treatment, data=Females)
+rowPerc(tableF)
+colPerc(tableF)
 ```
 
 
@@ -164,20 +164,20 @@ In a different trial run, among females who were infected with the Covid-19 viru
 ## Inferential Results
 
 ```{r}
-chisq.test(table2)
-chisqtestGC(table2)
+chisq.test(tableF)
+chisqtestGC(tableF)
 ```
 
-P value is .000000002842 therefore we reject the null hypothesis.
+The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis 
 
 
 
 ```{r}
-Females$infected=factor(Females$infected,c('none','Covid19'))
+#Females$infected=factor(Females$infected,c('none','Covid19'))
 fisher.test(Females$treatment,Females$infected)
 ```
 
-P value is equal to 1
+P value is equal to 
 
 
 # Discussion and Conclusion
@@ -234,9 +234,9 @@ The frequency of those from the LGBTQ community infected with Covid-19 is less t
 ### Numerical Descriptive Results
 
 ```{r}
-table2 <- xtabs(~infected + treatment, data=LGBTQ)
-rowPerc(table2)
-colPerc(table2)
+tableG <- xtabs(~infected + treatment, data=LGBTQ)
+rowPerc(tableG)
+colPerc(tableG)
 ```
 
 Of those from the LGBTQ Community that were infected with the Covid-19 virus approximately 15% received a placebo vaccine and approximately 85% received a Covid921 vaccine. Among those members from the LGBTQ community that were not infected by the Covid-19 virus half were given a placebo vaccine and half were given the Covid921 vaccine.
@@ -248,17 +248,17 @@ In a different trial run, among those from the LGBTQ community who were infected
 
 ## Inferential Results
 ```{r}
-chisq.test(table2)
-chisqtestGC(table2)
+chisq.test(tableG)
+chisqtestGC(tableG)
 ```
 
 
 
-
+The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis
 
 
 ```{r}
-LGBTQ$infected=factor(LGBTQ$infected,c('none','Covid19'))
+#LGBTQ$infected=factor(LGBTQ$infected,c('none','Covid19'))
 fisher.test(LGBTQ$treatment,LGBTQ$infected)
 ```
 
@@ -312,9 +312,9 @@ The frequency of Drug Users who were infected with the Covid-19 virus is less th
 ### Numerical Descriptive Results
 
 ```{r}
-table2 <- xtabs(~infected + treatment, data=DrugUser)
-rowPerc(table2)
-colPerc(table2)
+tableDU <- xtabs(~infected + treatment, data=DrugUser)
+rowPerc(tableDU)
+colPerc(tableDU)
 ```
 
 
@@ -329,15 +329,15 @@ In a different trial run between Drug Users who were infected with the Covid-19 
 ## Inferential Results
 
 ```{r}
-chisq.test(table2)
-chisqtestGC(table2)
+chisq.test(tableDU)
+chisqtestGC(tableDU)
 ```
 
-
+The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.
 
 
 ```{r}
-DrugUser$infected=factor(DrugUser$infected,c('none','Covid19'))
+#DrugUser$infected=factor(DrugUser$infected,c('none','Covid19'))
 fisher.test(DrugUser$treatment,DrugUser$infected)
 ```
 
