--- a/Final.rmd
+++ b/Final.rmd
@@ -104,6 +104,7 @@ P value is .00000000000004631, The odds of the vaccine working for males is abou
 
 # Discussion and Conclusion
 
+Male is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.  The odds of the vaccine working for males is about 2.2:1
 
 ## Females
 
@@ -182,6 +183,7 @@ P value is equal to  0.0002162, The odds of the vaccine working for females is a
 
 # Discussion and Conclusion
 
+Female is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus. Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus. The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis. P value is equal to  0.0002162, The odds of the vaccine working for females is about 1.50:1
 
 
 ## LGBTQ
