--- a/Final.rmd
+++ b/Final.rmd
@@ -183,7 +183,7 @@ P value is equal to  0.0002162, The odds of the vaccine working for females is a
 
 # Discussion and Conclusion
 
-Female is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus. Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus. The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis. P value is equal to  0.0002162, The odds of the vaccine working for females is about 1.50:1
+Female is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus. Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus. The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for females is about 1.50:1
 
 
 ## LGBTQ
@@ -269,6 +269,7 @@ P value is .00000001029, the odds of the vaccine working for those in LGBTQ comm
 
 # Discussion and Conclusion
 
+Sexual orientation LGTQ+ is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile. Of those in the subgroup LGBTQ who were infected with the Covid-19 virus less than 20% received a placebo vaccine and over 80% received the Covid921 vaccine. Of those LGBTQ members who were not infected by Covid-19 50% received a placebo vaccine and 50% received a Covid921 vaccine. Of those from the LGBTQ Community that were infected with the Covid-19 virus approximately 15% received a placebo vaccine and approximately 85% received a Covid921 vaccine. Among those members from the LGBTQ community that were not infected by the Covid-19 virus half were given a placebo vaccine and half were given the Covid921 vaccine. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for those in LGBTQ community is about 0.2:1
 
 ## Druggies
 
