--- a/Final.rmd
+++ b/Final.rmd
@@ -350,9 +350,9 @@ P value is .000000000232, the odds of the vaccine working for drug users is abou
 
 # Discussion and Conclusion
 
+Drug use is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile. Among Drug User's who became infected with the Covid-19 virus less than 20% were given a placebo and over 80% were given the Covid921 vaccine. Among Drug User's who were not infected by Covid-19 a little more than half were given a placebo vaccine and slightly less than half were given the Covid-921 vaccine. Among Drug Users who were infected with Covid-19 less than 12% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. Between Drug Users who were not infected with Covid-19 about 51% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for drug users is about 0.1:1
 
-
-# Overall Results and 
+# Overall Results
 
 
 
