--- a/Final.rmd
+++ b/Final.rmd
@@ -104,7 +104,7 @@ P value is .00000000000004631, The odds of the vaccine working for males is abou
 
 # Discussion and Conclusion
 
-Male is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.  The odds of the vaccine working for males is about 2.2:1
+The original question was does Covid-921 vaccine exhibit a significant difference in effectiveness between male populations. Male is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.  The odds of the vaccine working for males is about 2.2:1
 
 ## Females
 
