--- a/Final.rmd
+++ b/Final.rmd
@@ -57,7 +57,7 @@ barchartGC(~infected + treatment,data=Males, type="percent")
 ```
 
 
-Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine.
+Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. 
 
 The frequency of those males infected with Covid-19 is less than 500, among those males who were infected the ones who received a placebo had higher frequency than those who received the vaccine. The frequency of those males who did not get infected with Covid-19 is about 10000, the frequency of males who were not infected both reach over 8000 regardless of whether they took a vaccine or placebo. Although, of those males who were not infected the ones who took a placebo have a higher frequency than the males who were not infected and got the Covid921 vaccine.
 
@@ -104,7 +104,7 @@ P value is .00000000000004631, The odds of the vaccine working for males is abou
 
 # Discussion and Conclusion
 
-The original question was does Covid-921 vaccine exhibit a significant difference in effectiveness between male populations. Male is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.  The odds of the vaccine working for males is about 2.2:1
+The original question was does Covid-921 vaccine exhibit a significant difference in effectiveness between male populations. Male is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. Of the males who were infected with Covid-19 over 60% were given the placebo and about 30% were given the real Covid921 vaccine. Of the males who were not infected with the Covid-19 virus about half were given the Covid921 vaccine and the other half were given a placebo vaccine. About 70% of males who received a placebo were infected with Covid-19. Approximately 30% of males that received the real vaccine were infected with Covid-19. 50.48% of males those who received the placebo reported not being infected by the Covid-19 virus, while approximately 50% of males who received the Covid921 vaccine reported feeling Ok and not infected with the Covid19 virus. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis.  The odds of the vaccine working for males is about 2.2:1 I would reccomend males get this vaccine
 
 ## Females
 
@@ -183,12 +183,12 @@ P value is equal to  0.0002162, The odds of the vaccine working for females is a
 
 # Discussion and Conclusion
 
-The original question was does Covid-921 vaccine exhibit a significant difference in effectiveness between female populations. Female is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus. Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus. The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for females is about 1.50:1
+The original question was does Covid-921 vaccine exhibit a significant difference in effectiveness between female populations. Female is categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is the response variable. Therefore, we use cat~cat helper file. About 38% of women who received the Covid921 vaccine were infected with Covid-19, meanwhile a high 60% of women who received a placebo were infected with Covid-19. 50% of women who received the Covid921 vaccine were not infected and 50% of women who received the placebo vaccine did not get infected with the Covid-19 virus. Of those females who were infected with the Covid-19 virus 60% received a placebo and 40% received the real Covid 921 vaccine. Approximately, 50% of females who did receive the Covid921 vaccine and 50% of females who received a placebo did not report being infected with the Covid-19 virus. The chisquared test determined the P value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for females is about 1.50:1 I would reccomend females get this vaccine.
 
 
 ## LGBTQ
 
-$H_0$ The COVID-921 vaccine exhibits consistent effectiveness across different sexual orientation subgroups.
+$H_0$ The COVID-921 vaccine does not demonstrate varying effectiveness across different sexual orientation subgroups.
 
 
 
@@ -270,6 +270,7 @@ P value is .00000001029, the odds of the vaccine working for those in LGBTQ comm
 # Discussion and Conclusion
 
 The original question was is Covid-921 vaccine effective among those in different sexual orientation subgroups. Sexual orientation LGTQ+ is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile. Of those in the subgroup LGBTQ who were infected with the Covid-19 virus less than 20% received a placebo vaccine and over 80% received the Covid921 vaccine. Of those LGBTQ members who were not infected by Covid-19 50% received a placebo vaccine and 50% received a Covid921 vaccine. Of those from the LGBTQ Community that were infected with the Covid-19 virus approximately 15% received a placebo vaccine and approximately 85% received a Covid921 vaccine. Among those members from the LGBTQ community that were not infected by the Covid-19 virus half were given a placebo vaccine and half were given the Covid921 vaccine. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for those in LGBTQ community is about 0.2:1
+I would not recommend this vaccine to those in the LGBTQ+ community.
 
 ## Druggies
 
@@ -350,9 +351,9 @@ P value is .000000000232, the odds of the vaccine working for drug users is abou
 
 # Discussion and Conclusion
 
-The original question was does the COVID-921 vaccine demonstrate varying effectiveness among individuals with different levels of drug use. Drug use is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile. Among Drug User's who became infected with the Covid-19 virus less than 20% were given a placebo and over 80% were given the Covid921 vaccine. Among Drug User's who were not infected by Covid-19 a little more than half were given a placebo vaccine and slightly less than half were given the Covid-921 vaccine. Among Drug Users who were infected with Covid-19 less than 12% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. Between Drug Users who were not infected with Covid-19 about 51% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for drug users is about 0.1:1
+The original question was does the COVID-921 vaccine demonstrate varying effectiveness among individuals with different levels of drug use. Drug use is a categorical variable, Covid-921 vaccine administration is an explanatory variable, Covid-19 prevention effectiveness is a response variable. Therefore, we use cat~cat helperfile. Among Drug User's who became infected with the Covid-19 virus less than 20% were given a placebo and over 80% were given the Covid921 vaccine. Among Drug User's who were not infected by Covid-19 a little more than half were given a placebo vaccine and slightly less than half were given the Covid-921 vaccine. Among Drug Users who were infected with Covid-19 less than 12% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. Between Drug Users who were not infected with Covid-19 about 51% were given a placebo vaccine and approximately 88% were given the Covid921 vaccine. The chisquare test determined p value is less than 0.05 therefore we reject the null hypothesis. The odds of the vaccine working for drug users is about 0.1:1 I would not recommend this vaccine to Drug Users.
 
 # Overall Results
 
-The overall original question was will the Covid-921 vaccine exhibit different effectiveness across the variety of sub populations? This includes individuals such as males, females, those of a sexual orientation in the LGBTQ+ community, and drug users. In all 4 cases the P-value was less than 0.05 therefore in all 4  cases we reject the null hypothesis
+The overall original question was will the Covid-921 vaccine exhibit different effectiveness across the variety of sub populations? This includes individuals such as males, females, those of a sexual orientation in the LGBTQ+ community, and drug users. In all 4 cases the P-value was less than 0.05 therefore in all 4  cases we reject the null hypothesis. I would reccomend this vaccine to males and females although I would not reccomend this vaccine to those in the LGBTQ+ community or Drug Users.
 
